<resources>
    <string name="app_name">ODC</string>
    <string name="loginText">Login Details</string>
    <string name="usernameHint">Enter Username</string>
    <string name="passwordHint">Enter Password</string>
    <string name="submitText">Submit</string>
    <string name="title_activity_user_home_screen">UserHomeScreen</string>
    <string name="action_settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="profile">Profile</string>
    <string name="event">Event</string>
    <string name="group">Group</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="group_details">Group Details</string>
    <string name="submitGroup">Add Group</string>
    <string name="group_name">Enter Group Name</string>
    <string name="groupDetails">Enter the description</string>
    <string name="memberName">Enter Member Name</string>
    <string name="memberEmail">Enter Member Email</string>
    <string name="person">Users</string>
    <string name="enterUsetName">Enter User Name</string>
    <string name="enterEmail">Enter Email Id</string>
    <string name="enterPassword">Enter the Password</string>
    <string name="addUsers">Add Users</string>
    <string name="addPerson">Add</string>
    <string name="addEventDetails">Add Event Details</string>
</resources>
