<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".LogIn"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:background="@color/black"
            android:orientation="vertical">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/logo"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"

            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="52dp"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:text="@string/loginText"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textSize="36dp"
                    android:textColor="@color/black"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:gravity="center"
                android:orientation="vertical">
                <EditText
                    android:layout_width="256dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:hint="@string/usernameHint"
                    android:textColorHint="@color/ColorPrimary"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16dp"
                    android:padding="8dp"
                    android:background="@drawable/input_text_box"
                    android:id="@+id/username"
                    android:inputType="text"
                    />
                <EditText
                    android:layout_width="256dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:inputType="textPassword"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:hint="@string/passwordHint"
                    android:textColorHint="@color/ColorPrimary"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16dp"
                    android:padding="8dp"
                    android:background="@drawable/input_text_box"
                    android:id="@+id/password"
                    android:layout_marginTop="18dp"
                    />
                <Button
                    android:layout_width="256dp"
                    android:layout_height="52dp"
                    android:layout_marginTop="42dp"
                    android:text="@string/submitText"
                    android:background="@color/button_color"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimary"
                    android:padding="12dp"
                    android:id="@+id/login"
                    />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>