<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterUser"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:background="@color/black"
        android:orientation="vertical">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/logo"
            />
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="Register"
                android:textSize="36dp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="12dp"/>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <EditText
                        android:layout_width="352dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:layout_marginTop="24dp"
                        android:background="@drawable/input_text_box"
                        android:padding="8dp"
                        android:textColor="@color/colorPrimary"
                        android:hint="@string/enterUsetName"
                        android:textColorHint="@color/colorPrimary"
                        android:id="@+id/user_name"
                        android:inputType="text"
                        />

                    <EditText
                        android:layout_width="352dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:layout_marginTop="24dp"
                        android:background="@drawable/input_text_box"
                        android:padding="8dp"
                        android:textColor="@color/colorPrimary"
                        android:hint="@string/enterEmail"
                        android:textColorHint="@color/colorPrimary"
                        android:id="@+id/email"
                        android:inputType="textEmailAddress"/>
                    <EditText
                        android:layout_width="352dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:layout_marginTop="24dp"
                        android:background="@drawable/input_text_box"
                        android:padding="8dp"
                        android:textColor="@color/colorPrimary"
                        android:hint="@string/enterPassword"
                        android:textColorHint="@color/colorPrimary"
                        android:inputType="textPassword"
                        android:id="@+id/password"
                        android:imeOptions="actionDone"/>

                    <Button
                        android:layout_width="290dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="32dp"
                        android:layout_gravity="center"
                        android:padding="12dp"
                        android:background="@color/button_color"
                        android:text="Register"
                        android:textColor="@color/colorPrimary"
                        android:textStyle="bold"
                        android:id="@+id/submitUser"/>

                </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>