<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".UserHome">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:rowCount="1"
            android:alignmentMode="alignMargins"
            android:columnOrderPreserved="false"
            android:padding="14dp"
            android:layout_marginTop="16dp"
            android:id="@+id/mainGrid">

            <android.support.v7.widget.CardView
                android:layout_width="80dp"
                android:layout_height="105dp"
                android:layout_columnWeight="3"
                android:layout_rowWeight="1"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="8dp"
                app:cardElevation="8dp"
                app:cardCornerRadius="8dp"
                android:id="@+id/eventCard"
                >
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_margin="16dp"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/ic_event"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="14dp"
                        android:text="@string/event"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:layout_gravity="center_horizontal"
                        android:textSize="12dp"
                        />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="80dp"
                android:layout_height="105dp"
                android:layout_columnWeight="3"
                android:layout_rowWeight="1"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="8dp"
                app:cardElevation="8dp"
                app:cardCornerRadius="8dp"
                android:id="@+id/groupCard"
                >
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_margin="16dp"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/ic_group"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/group"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:layout_gravity="center_horizontal"
                        android:textSize="12dp"
                        />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="80dp"
                android:layout_height="105dp"
                android:layout_columnWeight="3"
                android:layout_rowWeight="1"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="8dp"
                app:cardElevation="8dp"
                app:cardCornerRadius="8dp"
                android:id="@+id/user_details"
                >
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_margin="16dp"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/ic_person"

                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/person"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:layout_gravity="center_horizontal"
                        android:textSize="12dp"
                        />
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <!--
                                    <android.support.v7.widget.CardView
                                        android:layout_width="100dp"
                                        android:layout_height="90dp"
                                        android:layout_columnWeight="1"
                                        android:layout_rowWeight="1"
                                        android:layout_marginBottom="16dp"
                                        android:layout_marginLeft="8dp"
                                        android:layout_marginRight="8dp"
                                        app:cardElevation="8dp"
                                        app:cardCornerRadius="8dp"
                                        >
                                        <LinearLayout
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:layout_gravity="center_vertical"
                                            android:layout_margin="16dp"
                                            android:orientation="vertical"
                                            >
                                            <ImageView
                                                android:layout_width="wrap_content"
                                                android:layout_height="wrap_content"
                                                android:layout_gravity="center_horizontal"
                                                android:src="@drawable/ic_group"/>
                                            <TextView
                                                android:layout_width="wrap_content"
                                                android:layout_height="wrap_content"
                                                android:text="@string/group"
                                                android:textAlignment="center"
                                                android:textStyle="bold"/>
                                        </LinearLayout>
                                    </android.support.v7.widget.CardView>
                                    <android.support.v7.widget.CardView
                                        android:layout_width="100dp"
                                        android:layout_height="90dp"
                                        android:layout_columnWeight="1"
                                        android:layout_rowWeight="1"
                                        android:layout_marginBottom="16dp"
                                        android:layout_marginLeft="8dp"
                                        android:layout_marginRight="16dp"
                                        app:cardElevation="8dp"
                                        app:cardCornerRadius="8dp"
                                        >
                                        <LinearLayout
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:layout_gravity="center_vertical"
                                            android:layout_margin="16dp"
                                            android:orientation="vertical"
                                            >
                                            <ImageView
                                                android:layout_width="wrap_content"
                                                android:layout_height="wrap_content"
                                                android:layout_gravity="center_horizontal"
                                                android:src="@drawable/ic_group"/>
                                            <TextView
                                                android:layout_width="wrap_content"
                                                android:layout_height="wrap_content"
                                                android:text="@string/group"
                                                android:textAlignment="center"
                                                android:textStyle="bold"/>
                                        </LinearLayout>
                                    </android.support.v7.widget.CardView>-->
        </GridLayout>

    </LinearLayout>

</FrameLayout>